--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 appnope==0.1.4
 asttokens==3.0.0
+bidict==0.23.1
 blinker==1.9.0
+certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
 debugpy==1.8.12
 decorator==5.1.1
 executing==2.2.0
 Flask==3.1.0
+Flask-Admin==1.6.1
+Flask-Login==0.6.3
 Flask-Misaka==1.0.1
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+h11==0.14.0
+idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
 itsdangerous==2.2.0
@@ -27,18 +36,25 @@ pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
-psutil== 6.1.1
+psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-engineio==4.11.2
+python-socketio==5.12.1
 pyzmq==26.2.1
+requests==2.32.3
+simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.37
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
+urllib3==2.3.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
+wsproto==1.2.0
+WTForms==3.2.1
